# cyber-force

./: .env.example  .gitignore  README.md  feishu_bot.py  pyproject.toml  start_bot.sh  慢速完善入口.md
kb/governance/: action_policy.yaml  decision_policy.yaml  write_guardrails.yaml
kb/identity/: constitution.md  modes.yaml  principles.yaml  self_facts.yaml  style.yaml
kb/memory/: MEMORY.md  bootstrap.yaml  classification.yaml  promotion_policy.yaml  scanned.json
prompts/: critic.md  decision.md  intake.md  memory_extract.md
protocol/: carrier-manifest.example.yaml  loader-protocol.md
src/cyber_force/: __init__.py  cli.py  config.py  engine.py  handshake.py  kb_loader.py  memory.py  prompts.py  provider.py  scanner.py  schemas.py  server.py
tests/: test_engine.py  test_feishu_bot.py  test_memory_markdown.py  test_protocol.py  test_scanner.py
